Changed string property format from {prop} to $prop$ because yaml value can't start with { and quoted them is annoying. Added search in parent directories to the root for include.yaml, which is automatically included for all projects if found.